# cv-in-rust

./: Cargo.toml  README.md
src/basic/: 01_read_image.rs  02_edge_detection.rs
