[package]
name = "cv-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"

[[bin]]
name = "read_image"
path = "src/basic/01_read_image.rs"

[[bin]]
name = "edge_detection"
path = "src/basic/02_edge_detection.rs"
